name:                HakoniwaKilling
version:             2.0.0.0
description:         A probability calculator of killing a monster in Hakoniwa Shoto.
homepage:            https://github.com/masaniwasdp/HakoniwaKilling#readme
license:             MIT
license-file:        LICENSE
author:              masaniwa
maintainer:          masaniwasdp@gmail.com
copyright:           2017 masaniwa
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HakoniwaKilling
                     , Probability
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable HakoniwaKilling-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O
  build-depends:       base
                     , HakoniwaKilling
  default-language:    Haskell2010

test-suite HakoniwaKilling-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HakoniwaKillingSpec
                     , ProbabilitySpec
  build-depends:       base
                     , hspec
                     , HakoniwaKilling
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masaniwasdp/HakoniwaKilling
