name:                HakoniwaKilling
version:             3.1.0.0
description:         The calculator of probability that the monster will die, in Hakoniwa Islands.
homepage:            https://github.com/masaniwasdp/HakoniwaKilling#readme
license:             MIT
license-file:        LICENSE
author:              masaniwa
maintainer:          masaniwasdp@gmail.com
copyright:           2017 masaniwa
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HakoniwaKilling.KillingProbability
                     , HakoniwaKilling.Probability
  build-depends:       base >= 4.7 && < 5
                     , parallel
  default-language:    Haskell2010

executable hakoniwakilling
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O3
  build-depends:       HakoniwaKilling
                     , base
                     , optparse-declarative
  default-language:    Haskell2010

test-suite hakoniwakilling-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
  build-depends:       HakoniwaKilling
                     , base
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masaniwasdp/HakoniwaKilling
