name:               hakocalc
version:            4.1.3.0
description:        A calculator of probability that a monster will die, in the Hakoniwa Islands.
homepage:           https://github.com/masaniwasdp/Hakocalc#readme
license:            MIT
license-file:       LICENSE
author:             masaniwa
copyright:          2019 masaniwa
build-type:         Simple
data-files:         assets/command/config.yaml
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  exposed-modules:  Hakocalc.Command.Commands
                  , Hakocalc.Command.Config
                  , Hakocalc.Command.Function
                  , Hakocalc.Command.Helper
                  , Hakocalc.Entity.Probability
                  , Hakocalc.Service.Common
                  , Hakocalc.Service.Defeat
  ghc-options:      -Wall -O2
  build-depends:    aeson
                  , base
                  , casing
                  , lens
                  , optparse-applicative
                  , yaml
  default-language: Haskell2010

executable hakocalc
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Paths_hakocalc
  ghc-options:      -Wall -O2
  build-depends:    base
                  , hakocalc
                  , optparse-applicative
                  , yaml
  default-language: Haskell2010

test-suite hakocalc-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Hakocalc.Entity.ProbabilitySpec
                  , Hakocalc.Service.CommonSpec
                  , Hakocalc.Service.DefeatSpec
  ghc-options:      -Wall
  build-depends:    base
                  , hakocalc
                  , hspec
  default-language: Haskell2010
